# asset-management

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/release/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  update-portfolio.yml
config/: assets.yaml  initial_positions.yaml  monthly_purchases.yaml
data/portfolio/: portfolio_by_asset.csv  portfolio_daily.csv
data/prices/: prices.csv
data/transactions/: generated_purchases.csv
develop/: index.html
docs/: development.md  spec.md
public/: index.html
src/: build_dashboard.py  calculate.py  calculate_portfolio.py  config.py  fetch_prices.py  generate_transactions.py
src/fetchers/: base.py  factory.py  fixed.py  yahoo_finance_jp.py  yfinance_adapter.py
tests/: conftest.py
tests/e2e/: conftest.py  test_dashboard.py
tests/fixtures/: yahoo_finance_jp_sample.html
tests/integration/: test_build_dashboard.py  test_build_dashboard_full.py  test_calculate_portfolio.py  test_fetch_prices.py  test_generate_transactions.py
tests/unit/: test_calculate.py  test_calculate_portfolio.py  test_config.py  test_fetcher_factory.py  test_fetcher_fixed.py  test_fetcher_yahoo_finance_jp.py  test_fetcher_yfinance.py  test_generate_transactions.py  test_update_portfolio_workflow.py
