[project]
name = "asset-management"
version = "0.1.0"
description = "積立投資の評価額を可視化するトラッカー"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "plotly>=5.22",
    "pyyaml>=6.0",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-playwright>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data", "public"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
markers = [
    "e2e: ブラウザを起動する E2E テスト (Playwright)",
]
